# agent-ui

./: CURRENT_STATUS_ANALYSIS.md  GUIDES.md  IMPLEMENTATION_GUIDES.md  QUICK_START.md  README.md  README_TRANSFORMATION_GUIDE.md  TODO.md  TRANSFORMATION_COMPLETE.md  client.py  database.py  provider.py  pyproject.toml  pytest.ini  requirements.txt  test_agent_registry.py  test_loop_detection.py  test_mcp_manager.py  test_response_cache.py  test_tool_registry.py
agents/: __init__.py  assistant.py  base.py  base_agent.py  fncall_agent.py  registry.py
cli/: __init__.py  commands.py  config.py  main.py
core/: __init__.py  client.py  database.py  exceptions.py  provider.py  schemas.py
exceptions/: __init__.py  base.py
llm/: __init__.py  base.py  base_chat_model.py  schema.py
monitoring/: __init__.py  metrics.py
safety/: __init__.py  loop_detection.py
servers/: mcp_hf_server.py
tests/: __init__.py  conftest.py  test_agents.py  test_exceptions.py  test_retry.py  test_safety.py
tools/: __init__.py  base.py  base_tool.py  code_interpreter.py  mcp_manager.py  registry.py
utils/: __init__.py  cache.py  loop_detection.py  parallel.py  performance.py  response_cache.py  retry.py  safety.py
