[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ui"
version = "0.1.0"
description = "Multi-provider agent framework with MCP integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MiniMax Agent", email = "agent@minimax.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "huggingface_hub>=0.20.0",
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    "mcp>=1.0.0",
    "diskcache>=5.6.0",
    "redis>=5.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "pydantic>=2.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.19.0",
    "structlog>=23.1.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.17.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
agent-ui = "cli.main:main"
agent-cli = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=agents",
    "--cov=providers",
    "--cov=tools",
    "--cov=database",
    "--cov=utils",
    "--cov=exceptions",
    "--cov=safety",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
asyncio_mode = "auto"